--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,9 @@
     <string name="menu_contacto">Contacto</string>
     <string name="menu_about">Acerca de</string>
     <string name="menu_lista_contactos">Lista de Contactos</string>
+    <string name="menu_recibir_notificaciones">Recibir Notificaciones</string>
+    <string name="recibir_notificaciones">recibir Notificaciones</string>
+
     <string name="menu_editar">Editar</string>
     <string name="menu_eliminar">Eliminar</string>
     <string name="menu_view">Ver imagen</string>
@@ -47,6 +50,7 @@
     <string name="et_email">Email</string>
     <string name="et_descripcion">Descripción</string>
     <string name="btn_enviar_comentario">Enviar Comentario</string>
+    <string name="plikes">0 Likes</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
